--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "168f38c0",
    "metadata": {
     "ExecuteTime": {
@@ -1052,63 +1052,56 @@
     "    \n",
     "    # Aprox 1 linea para:\n",
     "    # Obtener las dimensiones de A_prev\n",
-    "    # (m, n_H_prev, n_W_prev, n_C_prev) =\n",
+    "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Aprox 1 linea para:\n",
     "    # Obtener las dimensiones de W\n",
-    "    # (f, f, n_C_prev, n_C) =\n",
+    "    (f, f, n_C_prev, n_C) = W.shape\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Aprox 2 lineas para:\n",
     "    # Obtener datos de \"hparameters\"\n",
-    "    # stride = \n",
-    "    # pad = \n",
+    "    stride = hparameters['stride']\n",
+    "    pad = hparameters['pad']\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Hint: use int() to apply the 'floor' operation. (≈2 lines)\n",
     "    # Aprox 2 lineas para:\n",
     "    # Calcular las dimensiones del Conv output, usando las formulas dadas arriba\n",
-    "    # n_H =\n",
-    "    # n_W\n",
+    "    n_H = int((n_H_prev - f + 2 * pad) / stride) + 1\n",
+    "    n_W = int((n_W_prev - f + 2 * pad) / stride) + 1\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Aprox 1 linea para\n",
     "    # Iniciarlizar el volumen de salida Z con ceros\n",
-    "    # Z = \n",
+    "    Z = np.zeros((m, n_H, n_W, n_C))\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # Creamos A_prev_pad al agregar padding a A_prev\n",
     "    A_prev_pad = zero_pad(A_prev, pad)\n",
     "    \n",
-    "    # En este bloque de codigo deberan:\n",
-    "    # 1. Iterar sobre el batch de entrenamiento (m)\n",
-    "    # 2. Obtener a_prev_pad, para seleccionar el ith ejemplo con padding de entrenamiento\n",
-    "    # 3. Iterar sobre el axis vertical de la salida (n_H)\n",
-    "    # 4 y 5. Encontrar el inicio y final vertical de la ventana actual (slice)\n",
-    "    #        Es decir:\n",
-    "    #        vert_start =\n",
-    "    #        vert_end =\n",
-    "    # 6. Iterar sobre el axis horizontal de la salida (n_W)\n",
-    "    # 7 y 8. Encontrar el inicio y final horizontal de la ventana actual (slice)\n",
-    "    #        Es decir:\n",
-    "    #        horiz_start =\n",
-    "    #        horiz_end =\n",
-    "    # 9. Iterar sobre los canales (= # filtros) de la salida (n_C)\n",
-    "    # 10. Usar las esquinas para definir el slice (3D) de a_prev_pad. \n",
-    "    #     a_slice_prev = \n",
-    "    # 11. Convolucione el slice (3D) con el filtro correcto W, y bias b, para regresar la salida\n",
-    "    #     weights =\n",
-    "    #     biases = \n",
-    "    #     Z[i, h, w, c] = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # En este bloque de código se realiza la convolución\n",
+    "    for i in range(m):  # iterar sobre el batch de entrenamiento\n",
+    "        a_prev_pad = A_prev_pad[i]  # seleccionar el i-ésimo ejemplo con padding\n",
+    "        for h in range(n_H):  # iterar sobre el axis vertical de la salida\n",
+    "            vert_start = h * stride\n",
+    "            vert_end = vert_start + f\n",
+    "            for w in range(n_W):  # iterar sobre el axis horizontal de la salida\n",
+    "                horiz_start = w * stride\n",
+    "                horiz_end = horiz_start + f\n",
+    "                for c in range(n_C):  # iterar sobre los canales (= # filtros) de la salida\n",
+    "                    a_slice_prev = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "                    weights = W[:, :, :, c]\n",
+    "                    biases = b[:, :, :, c]\n",
+    "                    Z[i, h, w, c] = np.sum(a_slice_prev * weights) + float(biases)\n",
     "    \n",
+    "\n",
     "    # Asegurandose que la salida sea con la forma correcta\n",
     "    assert(Z.shape == (m, n_H, n_W, n_C))\n",
     "    \n",
@@ -1120,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "88d0f145",
    "metadata": {
     "ExecuteTime": {
@@ -1141,7 +1134,77 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z's mean =\n",
+      " 0.3337664511415829\n",
+      "Z[3,2,1] =\n",
+      " [ 4.1749337   9.00045401  1.79056239 -2.293963   -0.5189402  10.78547069\n",
+      "  1.42173371 13.11009042]\n",
+      "cache_conv[0][1][2][3] =\n",
+      " [ 1.88596049  0.30974852 -0.3170466   0.481606   -0.43747686]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aleaz\\AppData\\Local\\Temp\\ipykernel_4360\\3718629077.py:66: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  Z[i, h, w, c] = np.sum(a_slice_prev * weights) + float(biases)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(10,7,7,5)\n",
@@ -1257,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d283ac57",
    "metadata": {
     "ExecuteTime": {
@@ -1310,23 +1373,21 @@
     "    # Init la matriz de salida A\n",
     "    A = np.zeros((m, n_H, n_W, n_C))\n",
     "    \n",
-    "    # En este bloque de codigo debera;\n",
-    "    # 1. Iterar sobre los ejemplos de entrada (m)\n",
-    "    # 2. Iterar sobre los el eje vertical de la salida (n_H)\n",
-    "    # 3. Encontrar el inicio y fin vertical de la ventana actual\n",
-    "    #    vert_start = \n",
-    "    #    vert_end = \n",
-    "    # 4. Iterar sobre el eje horizontal de la salida (n_W)\n",
-    "    # 5. Encontrar el inicio y fin horizontal de la ventana actual\n",
-    "    #    horiz_start = \n",
-    "    #    horiz_end =\n",
-    "    # 6. Iterar sobre los canales de salida (n_C)\n",
-    "    # 7. Encontrar las orillas para definir el slice(ventana) actual en el ith ejemplo de training de A_prev, canal c\n",
-    "    #    a_prev_slice =\n",
-    "    # 8. Calcular el pooling dependiendo del modo (mode) - Use np.max y np.mean\n",
-    "    #    A[i, h, w, c] =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "     # En este bloque de código deberás:\n",
+    "    for i in range(m):  # Iterar sobre los ejemplos de entrada\n",
+    "        for h in range(n_H):  # Iterar sobre el eje vertical de la salida\n",
+    "            vert_start = h * stride\n",
+    "            vert_end = vert_start + f\n",
+    "            for w in range(n_W):  # Iterar sobre el eje horizontal de la salida\n",
+    "                horiz_start = w * stride\n",
+    "                horiz_end = horiz_start + f\n",
+    "                for c in range(n_C):  # Iterar sobre los canales de salida\n",
+    "                    a_prev_slice = A_prev[i, vert_start:vert_end, horiz_start:horiz_end, c]\n",
+    "                    \n",
+    "                    if mode == \"max\":\n",
+    "                        A[i, h, w, c] = np.max(a_prev_slice)\n",
+    "                    elif mode == \"average\":\n",
+    "                        A[i, h, w, c] = np.mean(a_prev_slice)\n",
     "    \n",
     "    # Guardar el input e hiperparametos en el \"cache\" para el pool_backward()\n",
     "    cache = (A_prev, hparameters)\n",
@@ -1339,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f1a2e02f",
    "metadata": {
     "ExecuteTime": {
@@ -1360,7 +1421,107 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = max\n",
+      "A.shape = (2, 3, 3, 3)\n",
+      "A =\n",
+      " [[[[2.65440726 2.09732919 0.89256196]\n",
+      "   [2.65440726 2.09732919 0.89256196]\n",
+      "   [2.65440726 1.44060519 0.77174916]]\n",
+      "\n",
+      "  [[1.5964877  2.39887598 0.89256196]\n",
+      "   [1.5964877  2.39887598 0.89256196]\n",
+      "   [1.5964877  2.39887598 0.77174916]]\n",
+      "\n",
+      "  [[1.5964877  2.39887598 1.23583026]\n",
+      "   [1.5964877  2.39887598 1.36481958]\n",
+      "   [1.5964877  2.39887598 1.36481958]]]\n",
+      "\n",
+      "\n",
+      " [[[1.84392163 2.43182155 1.29498747]\n",
+      "   [1.84392163 1.84444871 1.29498747]\n",
+      "   [0.6411132  1.84444871 1.16961103]]\n",
+      "\n",
+      "  [[1.05650003 1.83680466 1.29498747]\n",
+      "   [1.05650003 0.9194503  1.29498747]\n",
+      "   [1.60523445 0.9194503  1.16961103]]\n",
+      "\n",
+      "  [[1.06265456 1.83680466 0.68596995]\n",
+      "   [1.84881089 0.9194503  0.91014646]\n",
+      "   [1.84881089 1.42664748 1.06769765]]]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = average\n",
+      "A.shape = (2, 3, 3, 3)\n",
+      "A =\n",
+      " [[[[-0.03144582  0.21101766 -0.4691968 ]\n",
+      "   [-0.19309428  0.11749016 -0.32066469]\n",
+      "   [ 0.03682201  0.07413032 -0.36460992]]\n",
+      "\n",
+      "  [[-0.58916194  0.45332745 -0.92209295]\n",
+      "   [ 0.01933338  0.23001555 -0.80282417]\n",
+      "   [ 0.33096648 -0.05773358 -0.55515521]]\n",
+      "\n",
+      "  [[-0.19306801  0.61727733 -0.75579122]\n",
+      "   [ 0.34757347  0.47452468 -0.55854075]\n",
+      "   [ 0.52805193 -0.10908417 -0.5041339 ]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0.41867593  0.27110615  0.24018433]\n",
+      "   [-0.08325311  0.13111052  0.36317349]\n",
+      "   [-0.35974293 -0.13195187  0.30872263]]\n",
+      "\n",
+      "  [[ 0.13066225  0.09595298 -0.31301579]\n",
+      "   [-0.36030628 -0.08070726  0.1281678 ]\n",
+      "   [-0.190839   -0.07153563  0.25708761]]\n",
+      "\n",
+      "  [[ 0.11435948  0.17765852 -0.54259002]\n",
+      "   [ 0.17261558 -0.07438603 -0.32846615]\n",
+      "   [ 0.14368759  0.21413355  0.1648492 ]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(2, 5, 5, 3)\n",
@@ -1538,10 +1699,10 @@
     "        \n",
     "        # Aprox 2 lineas para\n",
     "        # seleccionar el i-th ejemplo de entrenamiento de A_prev y dA_prev_pad\n",
-    "        # a_prev_pad =\n",
-    "        # da_prev_pad = \n",
+    "        a_prev_pad = zero_pad(A_prev[i], pad)\n",
+    "        da_prev_pad = zero_pad(dA_prev[i], pad)\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
     "        \n",
     "        # Repetimos los loops de los pasos forward\n",
     "        # Iteramos sobre el eje vertical (n_H)\n",
