--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "785c83cf",
    "metadata": {
     "ExecuteTime": {
@@ -1687,9 +1687,6 @@
     "    dW = np.zeros((f, f, n_C_prev, n_C))\n",
     "    db = np.zeros((1, 1, 1, n_C))\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "\n",
     "    # Agregar padding a  A_prev y dA_prev\n",
     "    A_prev_pad = zero_pad(A_prev, pad)\n",
     "    dA_prev_pad = zero_pad(dA_prev, pad)\n",
@@ -1697,12 +1694,9 @@
     "    # Iteramos sobre los datos de entrenamiento\n",
     "    for i in range(m): \n",
     "        \n",
-    "        # Aprox 2 lineas para\n",
-    "        # seleccionar el i-th ejemplo de entrenamiento de A_prev y dA_prev_pad\n",
-    "        a_prev_pad = zero_pad(A_prev[i], pad)\n",
-    "        da_prev_pad = zero_pad(dA_prev[i], pad)\n",
-    "        # YOUR CODE HERE\n",
-    "        # raise NotImplementedError()\n",
+    "        # Seleccionar el i-th ejemplo de entrenamiento de A_prev y dA_prev_pad\n",
+    "        a_prev_pad = A_prev_pad[i]\n",
+    "        da_prev_pad = dA_prev_pad[i]\n",
     "        \n",
     "        # Repetimos los loops de los pasos forward\n",
     "        # Iteramos sobre el eje vertical (n_H)\n",
@@ -1712,46 +1706,35 @@
     "                # Iteramos sobre los canales (n_C)\n",
     "                for c in range(n_C):\n",
     "                    \n",
-    "                    # Aprox 4 linea para\n",
     "                    # Encontrar las orillas de la ventana actual (slice) similar a como se hizo antes\n",
-    "                    # vert_start =\n",
-    "                    # vert_end =\n",
-    "                    # horiz_start = \n",
-    "                    # horiz_end =\n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
     "                    \n",
-    "                    # Aprox 1 linea de codigo para\n",
     "                    # Usar las orillas para definir el slice (ventana) de a_prev_pad\n",
-    "                    # a_slice = \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
-    "\n",
-    "                    # Update gradients for the window and the filter's parameters using the code formulas given above\n",
-    "                    # Aprox 3 lineas para\n",
+    "                    a_slice = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "                    \n",
     "                    # Actualizar gradientes para la ventana y los params del filtro usando las formulas de arriba\n",
-    "                    # da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] +=\n",
-    "                    # dW[:,:,:,c] +=\n",
-    "                    # db[:,:,:,c] += \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] += W[:, :, :, c] * dZ[i, h, w, c]\n",
+    "                    dW[:, :, :, c] += a_slice * dZ[i, h, w, c]\n",
+    "                    db[:, :, :, c] += dZ[i, h, w, c]\n",
     "\n",
-    "        # Aprox 1 linea para\n",
     "        # Settear el dA_prev del i-th ejemplo de entrenamiento a un da_prev_pad sin padding\n",
-    "        # Considere usar X[pad:-pad, pad:-pad, :]\n",
-    "        # dA_prev[i, :, :, :] =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        if pad != 0:\n",
+    "            dA_prev[i, :, :, :] = da_prev_pad[pad:-pad, pad:-pad, :]\n",
+    "        else:\n",
+    "            dA_prev[i, :, :, :] = da_prev_pad\n",
     "    \n",
     "    # Asegurandose que la forma es la correcta\n",
     "    assert(dA_prev.shape == (m, n_H_prev, n_W_prev, n_C_prev))\n",
     "    \n",
-    "    return dA_prev, dW, db"
+    "    return dA_prev, dW, db\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "38166996",
    "metadata": {
     "ExecuteTime": {
@@ -1772,7 +1755,65 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA_mean = 1.7587047105903002\n",
+      "dW_mean = -30.84696464944312\n",
+      "db_mean = 163.5455610593757\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "\n",
@@ -1841,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "90d377c6",
    "metadata": {
     "ExecuteTime": {
@@ -1872,18 +1913,17 @@
     "    Returns:\n",
     "    mask: Array de la misma dimensión de la ventana, y con 1 donde está el máximo\n",
     "    \n",
-    "    \"\"\"\n",
-    "    # Aprox 1 linea para\n",
-    "    # mask =\n",
+    "    \"\"\"# Aprox 1 linea para\n",
+    "    mask = (x == np.max(x))\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "23f81088",
    "metadata": {
     "ExecuteTime": {
@@ -1904,7 +1944,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [[ 0.71167353 -0.32448496 -1.00187064]\n",
+      " [ 0.23625079 -0.10215984 -1.14129263]]\n",
+      "mask =  [[ True False False]\n",
+      " [False False False]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "x = np.random.randn(2,3)\n",
@@ -1953,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9e554a20",
    "metadata": {
     "ExecuteTime": {
@@ -1987,18 +2054,18 @@
     "    \"\"\"\n",
     "    \n",
     "    # Aprox 3 lieneas para\n",
-    "    # (n_H, n_W) = \n",
-    "    # average = \n",
-    "    # a =\n",
+    "    (n_H, n_W) = shape\n",
+    "    average = dz / (n_H * n_W)\n",
+    "    a = np.ones(shape) * average\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "876a3800",
    "metadata": {
     "ExecuteTime": {
@@ -2019,7 +2086,44 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor distribuido = [[0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "a = distribute_value(5, (7,7))\n",
     "print('valor distribuido =', a)\n",
@@ -2055,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "20621e64",
    "metadata": {
     "ExecuteTime": {
@@ -2109,9 +2213,9 @@
     "        \n",
     "        # Aprox 1 linea para\n",
     "        # seleccionar el ejemplo de entrenamiento de A_prev\n",
-    "        # a_prev = \n",
+    "        a_prev = A_prev[i]\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        # raise NotImplementedError()\n",
     "        \n",
     "        # Iterar sobre lo vertical (n_H)\n",
     "        for h in range(n_H):                   \n",
@@ -2122,35 +2226,36 @@
     "                    \n",
     "                    # Aprox 4 linea para\n",
     "                    # Encontrar las orillas de la ventana actual (slice) similar a como se hizo antes\n",
-    "                    # vert_start =\n",
-    "                    # vert_end =\n",
-    "                    # horiz_start = \n",
-    "                    # horiz_end =\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
     "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    # raise NotImplementedError()\n",
     "                    \n",
     "                    # Calcular backward prop para ambos modos\n",
     "                    if mode == \"max\":\n",
     "                        \n",
     "                        # Aprox 3 lineas para\n",
     "                        # Usar las orillas y \"c\" para definir el slice actual de a_prev\n",
-    "                        # a_prev_slice = \n",
+    "                        a_prev_slice = a_prev[vert_start:vert_end, horiz_start:horiz_end, c]\n",
     "                        # Crear una mascara desde a_prev_slice\n",
-    "                        # mask = \n",
+    "                        mask = create_mask_from_window(a_prev_slice)\n",
     "                        # Setear dA_prev para ser dA_prev + (la mascara multiplciada por la entrada correcta de dA)\n",
-    "                        # dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] +=\n",
+    "                        dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] += np.multiply(mask, dA[i, h, w, c])\n",
     "                        # YOUR CODE HERE\n",
-    "                        raise NotImplementedError()\n",
+    "                        # raise NotImplementedError()\n",
     "                        \n",
     "                    elif mode == \"average\":\n",
     "                        # Aprox 3 lineas para\n",
     "                        # Obtener los valores de dA\n",
-    "                        # da = \n",
+    "                        da = dA[i, h, w, c]\n",
     "                        # Definir la forma del filtro fxf\n",
-    "                        # shape =\n",
+    "                        shape = (f, f)\n",
     "                        # Distribuirlo para obtener el tamaño correcto de dA_prev (sume el valod distribuido de da)\n",
+    "                        dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] += distribute_value(da, shape)\n",
     "                        # YOUR CODE HERE\n",
-    "                        raise NotImplementedError()\n",
+    "                        # raise NotImplementedError()\n",
     "                        \n",
     "\n",
     "    # Asegurandose que la forma de la salida sea correcta\n",
@@ -2161,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "869852be",
    "metadata": {
     "ExecuteTime": {
@@ -2182,7 +2287,64 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 4, 2, 2)\n",
+      "mode = max\n",
+      "mean of dA =  0.10390017715645054\n",
+      "dA_prev[1,1] =  [[ 1.24312631  0.        ]\n",
+      " [ 0.         -1.05329248]\n",
+      " [-1.03592891  0.        ]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = average\n",
+      "mean of dA =  0.10390017715645054\n",
+      "dA_prev[1,1] =  [[ 0.31078158  0.10580814]\n",
+      " [ 0.30923847 -0.2046901 ]\n",
+      " [-0.00154311 -0.31049824]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(5, 5, 3, 2)\n",
