--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1dfb7e37",
    "metadata": {
     "ExecuteTime": {
@@ -101,7 +101,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcopy\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import copy\n",
@@ -3094,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc0740bd",
    "metadata": {
     "ExecuteTime": {
@@ -3116,6 +3128,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -3146,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b7ce40ce",
    "metadata": {
     "ExecuteTime": {
@@ -3208,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a47bebc2",
    "metadata": {
     "ExecuteTime": {
@@ -3262,8 +3275,11 @@
     "            # nn.Conv2d(\n",
     "            # nn.ReLU(\n",
     "            # nn.MaxPool2d(\n",
+    "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            #raise NotImplementedError()\n",
     "            # Output size after the third convolution and pooling\n",
     "            # output_size = (image_size / 4 - 3 + 2 * 1) / 1 + 1 = (image_size / 4 - 1) / 1 + 1 = image_size / 8\n",
     "        )\n",
@@ -3284,8 +3300,10 @@
     "            # Aprox 2 lineas para complementar\n",
     "            # nn.ReLU(\n",
     "            # nn.Linear(\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, num_classes)\n",
     "            # YOUR CODE HERE\n",
-    "            raise NotImplementedError()\n",
+    "            #raise NotImplementedError()\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -3298,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "64969070",
    "metadata": {
     "ExecuteTime": {
@@ -3330,7 +3348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9978afe3",
    "metadata": {
     "ExecuteTime": {
@@ -3358,7 +3376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "06142e42",
    "metadata": {
     "ExecuteTime": {
@@ -3378,7 +3396,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if CUDA is available and move the model to the GPU if possible\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -3388,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "38d4e66a",
    "metadata": {
     "ExecuteTime": {
@@ -3408,7 +3434,32 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNNClassifier(\n",
+      "  (conv_layers): Sequential(\n",
+      "    (0): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU()\n",
+      "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (3): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (4): ReLU()\n",
+      "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (6): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): ReLU()\n",
+      "    (8): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (fc_layers): Sequential(\n",
+      "    (0): Linear(in_features=4096, out_features=128, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=128, out_features=2, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the model architecture\n",
     "print(model)"
@@ -3416,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ea227ad7",
    "metadata": {
     "ExecuteTime": {
@@ -3445,7 +3496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d22ae5d8",
    "metadata": {
     "ExecuteTime": {
@@ -3465,7 +3516,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 8\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Define data transformations\u001b[39;00m\n\u001b[0;32m      2\u001b[0m transform \u001b[38;5;241m=\u001b[39m transforms\u001b[38;5;241m.\u001b[39mCompose([\n\u001b[0;32m      3\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mResize((image_size, image_size)),\n\u001b[0;32m      4\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mToTensor(),\n\u001b[0;32m      5\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mNormalize(mean\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m], std\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.5\u001b[39m])  \u001b[38;5;66;03m# Normalize to range [-1, 1]\u001b[39;00m\n\u001b[0;32m      6\u001b[0m ])\n\u001b[1;32m----> 8\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m CatsAndDogsDataset(data_dir\u001b[38;5;241m=\u001b[39m\u001b[43mdata_dir\u001b[49m, target_size\u001b[38;5;241m=\u001b[39m(image_size, image_size), train\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, transform\u001b[38;5;241m=\u001b[39mtransform)\n\u001b[0;32m      9\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m DataLoader(train_dataset, batch_size\u001b[38;5;241m=\u001b[39mbatch_size, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     11\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m CatsAndDogsDataset(data_dir\u001b[38;5;241m=\u001b[39mdata_dir, target_size\u001b[38;5;241m=\u001b[39m(image_size, image_size), train\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, transform\u001b[38;5;241m=\u001b[39mtransform)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define data transformations\n",
     "transform = transforms.Compose([\n",
@@ -3474,6 +3537,7 @@
     "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])  # Normalize to range [-1, 1]\n",
     "])\n",
     "\n",
+    "data_dir = './archive'\n",
     "train_dataset = CatsAndDogsDataset(data_dir=data_dir, target_size=(image_size, image_size), train=True, transform=transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
