--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -3030,8 +3030,16 @@
     "\n",
     "**NOTA:** Conteste como txt, pdf, comentario en la entrega o en este mismo notebook:\n",
     "* ¿Por qué creen que es el mal rendimiento de este modelo?\n",
+    "\n",
+    "    El modelo tinee un rendimiento deficiente, principalmente debido a dos factores. El primero, es que el modelo fue entrenado con muy pocas imágenes. El segundo es que estas imágenes tienen muy baja resolución, lo que hace que el modelo no pueda aprender bien las características de las imágenes. Además de eso, la arquitectura del modeo es muy simple, con pocas capas y pocos filtros, lo que puede resultar en que no se logren capturar las características propias de perros o gatos. \n",
+    "\n",
     "* ¿Qué pueden hacer para mejorarlo?\n",
+    "\n",
+    "    Para mejorar el modelo, se pueden tomar las siguientes acciones: Aumentar el tamaño y calidad de conjunto de imágnenes de entrenamiento, aumentar la resolución de las imágenes de entradad. Incrementar la complejidad de la arquitectura del modelo. Usar técnicas de regularización como el dropout para reducir overfitting. \n",
+    "\n",
     "* ¿Cuáles son las razones para que el modelo sea tan lento?\n",
+    "\n",
+    "    El modelo puede ser lento por implementación infeciente del código, ademas de la falta de uso de GPU para acelerar los cálculos. Además, el modelo es lento porque se está calculando el gradiente de forma manual, lo que puede ser muy ineficiente.\n",
     "\n",
     "Ahora pasemos a ver como hacer algo mejor para el mismo tipo de tarea usando PyTorch &#x1F60A;\n",
     "\n",
