--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -4018,7 +4018,12 @@
    "source": [
     "**NOTA:** Conteste como txt, pdf, comentario en la entrega o en este mismo notebook:\n",
     "* ¿Qué haría para mejorar el rendimiento del modelo?\n",
-    "* ¿Qué haría para disminuir las posibilidades de overfitting?"
+    "\n",
+    "Para mejorar el rendimiento del modelo, se puede realizar un ajuste de hiperparámetros mediante técnicas como Grid Search o Random Search para encontrar la mejor combinación de parámetros. Otra de las tecnicas puede ser la ingeniería de características, como la creación de nuevas características a partir de las existentes y la normalización o estandarización de las mismas. Otra acción que puede ayudar a mejorar el rendimiento es el aumento del tamaño del número de datos, ya sea recopilando más datos o utilizando técnicas de aumento de datos sinteticos a partir de los ya existentes.\n",
+    "\n",
+    "* ¿Qué haría para disminuir las posibilidades de overfitting?\n",
+    "\n",
+    "Para disminuir las posibilidades de overfitting, se pueden implementar técnicas de regularización como L1 (Lasso) o L2 (Ridge) para penalizar los coeficientes grandes y simplificar el modelo. El cross-validation es otra técnica que puede permitir evaluar el rendimiento del modelo en diferentes subconjuntos de los datos, asegurando que el modelo generaliza bien. En el caso de redes neuronales, se puede utilizar dropout para desactivar aleatoriamente neuronas durante el entrenamiento, previniendo que el modelo se ajuste demasiado a los datos de entrenamiento. "
    ]
   },
   {
@@ -4125,7 +4130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
